<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emzi0767.r6stratroulette.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/ic_r6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/app_title"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/about_author"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/about_author_contact"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/about_source"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autoLink="web"
            android:linksClickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_credits"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_ubi_assets"
            android:textAlignment="center"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_credits_1"
            android:textAlignment="center"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_credits_2"
            android:textAlignment="center"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_credits_3"
            android:textAlignment="center"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="@color/colorAccent" />

    </LinearLayout>

</ScrollView>