<?xml version="1.0" encoding="utf-8"?>
<!--
	This file is a part of R6: Strat Roulette project.

	Copyright 2018 Emzi0767

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

	    http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp">

    <ImageView
        android:id="@+id/randomop_img"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="6dp" />

    <TextView
        android:id="@+id/randomop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/randomop_ctu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAlignment="center"
        android:lines="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomop_lbl_weapon1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/randomop_weapon1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomrecruit_none"
            android:textSize="14sp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomop_lbl_weapon2"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/randomop_weapon2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomrecruit_none"
            android:textSize="14sp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomop_lbl_gadget"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/randomop_gadget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomrecruit_none"
            android:textSize="14sp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
