<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.emzi0767.r6stratroulette.RecruitRandomizerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_sword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_attacker"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/randomrecruit_attacker_img"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="6dp" />

        <TextView
            android:id="@+id/randomrecruit_attacker_ctu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_weapon1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_atk_weapon1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_weapon2"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_atk_weapon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_gadget1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_atk_gadget1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_gadget2"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_atk_gadget2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_shield" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_defender"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/randomrecruit_defender_img"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="6dp" />

        <TextView
            android:id="@+id/randomrecruit_defender_ctu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_weapon1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_def_weapon1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_weapon2"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_def_weapon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_gadget1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_def_gadget1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_lbl_gadget2"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/randomrecruit_def_gadget2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomrecruit_none"
                android:textSize="12sp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/randomrecruit_randomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomrecruit_btn_randomize"
        android:textSize="24sp"
        android:layout_margin="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorForeground" />

</LinearLayout>
